Update example projects

--- a/projects.json
+++ b/projects.json
@@ -25,6 +25,123 @@
         "https://placekitten.com/g/400/300",
         "https://placekitten.com/g/400/300"
       ]
-    }
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
+    {
+      "id": 2,
+      "client": "cl2",
+      "technology": "React Native",
+      "title": "Schiwlzet",
+      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "images": [
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300",
+        "https://placekitten.com/g/400/300"
+      ]
+    },
   ]
 }
