--- a/projects.json
+++ b/projects.json
@@ -5,7 +5,7 @@
       "client": "cl1",
       "technology": "ReactJS",
       "title": "Native App X",
-      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/400/300",
         "https://placekitten.com/g/400/300",
@@ -18,7 +18,7 @@
       "client": "cl2",
       "technology": "React Native",
       "title": "Schiwlzet",
-      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/400/300",
         "https://placekitten.com/g/400/300",
@@ -31,7 +31,7 @@
       "client": "cl2",
       "technology": "React Native",
       "title": "Schiwlzet",
-      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/700/600",
         "https://placekitten.com/g/400/300",
@@ -44,7 +44,7 @@
       "client": "cl2",
       "technology": "React Native",
       "title": "Schiwlzet",
-      "decription": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
+      "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/400/300",
         "https://placekitten.com/g/400/300",
@@ -57,7 +57,7 @@
       "client": "tileblush.com",
       "technology": "Wordpress, php, css",
       "title": "Tile Blush",
-      "decription": "Tile Blush is a gallery specialized in contemporary art. Based on Miami, FL. I designed the website to match the modern style of the hosted expositions. The site hosts exposition's information, artist's details and contact information.",
+      "description": "Tile Blush is a gallery specialized in contemporary art. Based on Miami, FL. I designed the website to match the modern style of the hosted expositions. The site hosts exposition's information, artist's details and contact information.",
       "images": [
         "https://storage.googleapis.com/ansky-project-images/tileblush1.png",
         "https://storage.googleapis.com/ansky-project-images/tileblush2.png",
