--- a/projects.json
+++ b/projects.json
@@ -4,7 +4,7 @@
       "id": 1,
       "client": "cl1",
       "technology": "ReactJS",
-      "title": "Native App X",
+      "title": "W 1",
       "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/1500/1200",
@@ -16,7 +16,7 @@
       "id": 2,
       "client": "cl2",
       "technology": "React Native",
-      "title": "Schiwlzet",
+      "title": "W 2",
       "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/1600/1300",
@@ -29,7 +29,7 @@
       "id": 3,
       "client": "cl2",
       "technology": "React Native",
-      "title": "Schiwlzet",
+      "title": "W 3",
       "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/1550/1250",
@@ -40,9 +40,9 @@
     },
     {
       "id": 4,
-      "client": "cl2",
+      "client": "yes",
       "technology": "React Native",
-      "title": "Schiwlzet",
+      "title": "W 4",
       "description": "Native app X is a native App designed to do something while it is still an App, ok, I just made this up",
       "images": [
         "https://placekitten.com/g/1650/1350",
@@ -55,7 +55,7 @@
       "id": 5,
       "client": "tileblush.com",
       "technology": "Wordpress, PHP5, JS, CSS",
-      "title": "Tile Blush",
+      "title": "Tile Blush W 4",
       "description": "Tile Blush is a gallery specialized in contemporary art. Based on Miami, FL. I designed the website to match the modern and minimalist style of the hosted expositions while keeping the important information at display.",
       "images": [
         "https://placekitten.com/g/1650/1350",
